fix overflow

--- a/ptr.css
+++ b/ptr.css
@@ -20,7 +20,6 @@
 }
 
 .ptr_wrap {
-  overflow-x: hidden;
   position: relative;
   min-height: 100%;
   -webkit-transform: translate3d(0, 0, 0);
